deploy/k8s/aio-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: stealth-browser-aio
  namespace: stealth-browser
  labels:
    app: stealth-browser
    mode: all-in-one
spec:
  type: NodePort
  selector:
    app: stealth-browser
    mode: all-in-one
  ports:
  - name: api
    port: 8000
    targetPort: 8000
    nodePort: 30800
    protocol: TCP
  - name: novnc
    port: 6080
    targetPort: 6080
    nodePort: 30680
    protocol: TCP
  - name: vnc
    port: 5900
    targetPort: 5900
    nodePort: 30590
    protocol: TCP
